fix bug with form jumping on mobile nrowser

--- a/src/styles/partials/modal.styl
+++ b/src/styles/partials/modal.styl
@@ -1,6 +1,6 @@
 
 .modal
-  
+
   &__dialog
     position: relative
     margin: 0 auto
@@ -9,41 +9,53 @@
     width: 65%
     height: 70%
     background-color: $white
-    
+
     &--form
       padding: 50px 65px 65px
       max-width: 540px
       min-height: 515px
-    
+
   &__photo
     position: relative
     height: 100%
-    
+
     img
       align()
       max-width: 100%
       max-height: 100%
-    
+
   +below(680px)
-  
+
     &__close
       top: 10px
       right: 10px
-    
+
     &__dialog
       padding: 40px 15px 15px
       width: 95%
       height: 50%
       max-height: 310px
-      
+
       &--form
         min-height: 475px
         max-height: initial
         height: auto
 
+.mfp-wrap
+  -webkit-overflow-scrolling: touch
+  -webkit-transform: translateZ(0)
+
+html.mfp-helper
+  height: 100%
+
+  body
+    overflow: hidden
+    height: 100%
+    -webkit-transform: translateZ(0)
+
 .mfp-bg.popup-call-override
   background: $dark-70
-    
+
 .mfp-bg.popup-photo-override
   background: $white-70
 
@@ -51,7 +63,7 @@ button.mfp-close
   display: block
   position: absolute
   top: 25px
-  right: 25px    
+  right: 25px
   width: 21px
   height: @width
   border-radius: @width
@@ -59,13 +71,13 @@ button.mfp-close
   outline: 0
   background: $gray-two img-url("icons/close.svg") no-repeat center center
   font-size: 0
-  
+
   &:active
     top: 25px
-    
+
   +below(680px)
     top: 10px
     right: 10px
-    
+
     &:active
-      top: 10px    
+      top: 10px
